test/invalid/baseline/enum-empty.txt
Syntax error at line 1 in enum-empty.webidl, since `enum Empty`:
enum Empty {};
             ^ No value in enum
